fix scroll on mobile at the TouchEvent

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -7,7 +7,7 @@
 html {
   line-height: $mainLineHeight;
   font-size: $mainFontSize;
-  height: 100%;
+  // height: 100%;
   @media screen and (max-width: $tableWidth) {
     font-size: 16px;
   }
@@ -193,7 +193,9 @@ button {
   margin-bottom: rem(100);
 }
 .stop-scrolling {
+  width: 100%;
   height: 100%;
+  // position: fixed;
   overflow: hidden;
 }
 @import 'modules/range-slider';
